<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisclaimerActivity">

    <TextView
        android:id="@+id/txtCaution"
        style="@style/Disclaimer"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:text="@string/disclaimer_caution"
        android:textStyle="bold" />

    <TextView
        style="@style/Disclaimer"
        android:layout_width="match_parent"
        android:text="@string/disclaimer" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/Button"
        android:onClick="continueButton"
        android:text="@string/disclaimerContinue"
        android:layout_alignParentBottom="true"
        android:visibility="visible" />

     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
        	android:id="@+id/tvVersion"
        	android:text="@string/units"
        	style="@style/Label"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:visibility="visible"
        	android:paddingTop="50dp"
        	android:layout_gravity="center"
        	android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
